# vps-user-api

./: .env.sample  Cargo.toml  Dockerfile  LICENSE.md  README.md  data.json  db.sh
.sqlx/: query-43dd8bc03b18e7d34e9cc2310dd617388c320d1af1de5925fae13082b2d7f992.json  query-4471dec6cbb271f09c4d9bf20a1c2a71f5fd3bc645b5bfdfab768d44a5df6c34.json  query-5421b7b8a13621089e67ca4c1bf58e12099de287da26bb70594e92c32cc3373e.json  query-58246519f3b44ea5d5a07f5764b116520b0caada422bff12af34de0c15c38518.json  query-8a1faf16cfc5b5c0cf112760a0aa9bf1add4ffa2fe96d794994abd5d372b5534.json  query-8c2695f588e595e6514498746c57e9ef323dbed311853acea7b548dd434944ef.json  query-9e4e9807a22334cc94f366e34c30fdbe5eeb11308377b43e7ded45508d0a0c7c.json  query-ab4d550af62198136bdda9caf098ba1b665c9234fa82cfee847afa5d8cbcecce.json  query-b1b7106ffde77d1dac9e3737fb051bfd13c4b05bb6bf98a04d26835067037169.json  query-b3420bdc0141420420f48e89050987bffccbc04841ab61bb224bf8a7a92109cf.json  query-bdf63c140ad9c3881e366cbbcbf1d682ea274b925c09fec83da36b403cb68857.json  query-c5a03dabb6cbb4771a068cf79eb0c7e94e3260b9fc89ae09236b7351c647913d.json  query-d87190c8e8c8b995ff9673acb6a5528bc8b26a293aba37eb0842b2b6143b272d.json  query-dd03f4d9f8439bc216ea4bf04d6128034c2dbb1f741f0476aae6c3947e4e4542.json  query-f081e95630ca146de5388a205b3520e31f08d0ed38932259c0bcf293dcf51517.json  query-f304ebc52a73d811f150a5debbd4e0b9ef0a0e1c3ce83bf0865eb41447f6d484.json  query-f9089fe6a6c006f6ded2aaad843f7148d2666a17b15e7fbaa29629e73c2208e9.json
migrations/: 20250806005346_user.sql  20250806031925_token.sql  20250806212548_server.sql  (+1 more)
(+18 files in other folders)
