[package]
name = "vps-user-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
base64 = "0.22.1"
bb8-redis = "0.24.0"
dotenvy = "0.15.7"
getrandom = { version = "0.3.3", features = ["std"] }
lettre = { version = "0.11.18", features = ["ring", "rustls", "tokio1-rustls", "webpki-roots"], default-features = false }
rand = "0.9.2"
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
